# theme-sync

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: promote.yaml  push.yml  release.yml
snap/: snapcraft.yaml
src/: main.rs
